pg_pv/redmain.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmaine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmaine
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: redmaine
    spec:
      containers:
      - image: redmine:4.1
        name: redmaine
        ports:
        - containerPort: 3000
