pg_pv/db_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
