pg_pv/redmain_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmain-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: redmain
  type: LoadBalancer
